// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout layout should update when xml change 1`] = `
<styled.div>
  <styled.div>
    <span
      key="Template-span-0"
    >
      some text
    </span>
  </styled.div>
</styled.div>
`;

exports[`layout layout should update when xml change 2`] = `
<styled.div>
  <styled.div>
    <span
      key="Template-span-0"
    >
      some text2
    </span>
  </styled.div>
</styled.div>
`;

exports[`layout some text 1`] = `
<styled.div>
  <styled.div>
    <span
      key="Template-span-0"
    >
      some text
    </span>
  </styled.div>
</styled.div>
`;
